# chat-prac-un

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/api/: __init__.py  auth.py  chat.py
backend/app/core/: __init__.py  security.py
backend/app/db/: database.py  db_chat_shish.drawio
backend/app/models/: message.py  user.py
backend/app/schemas/: __init__.py  message.py  user.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: AuthForm.jsx  Chat.jsx
